# Mean-shift-Image-Segmentation

./: 17_22_s_b.ppm  17_22_s_f.ppm  17_22_s_s.ppm  1_1_s_o.ppm  5_2_s.ppm  5_2_s_b.ppm  5_2_s_f.ppm  5_2_s_o.ppm  5_2_s_s.ppm  CMakeLists.txt  call_segment.cpp  call_segment.h  dir_segmentation.cpp  loadImage.cpp  loadImage.h  ms.h  msImageProcessor.cpp  msImageProcessor.h  test_segment.cpp
Images_ppm/: 10_10_s.ppm  10_11_s.ppm  10_13_s.ppm  10_14_s.ppm  10_15_s.ppm  10_16_s.ppm  10_17_s.ppm  10_18_s.ppm  10_19_s.ppm  10_1_s.ppm  10_20_s.ppm  10_21_s.ppm  10_22_s.ppm  10_23_s.ppm  10_24_s.ppm  10_25_s.ppm  10_26_s.ppm  10_27_s.ppm  10_28_s.ppm  10_29_s.ppm  10_2_s.ppm  10_30_s.ppm  10_31_s.ppm  10_32_s.ppm  10_3_s.ppm  10_4_s.ppm  10_5_s.ppm  10_6_s.ppm  10_7_s.ppm  10_8_s.ppm  10_9_s.ppm  11_10_s.ppm  11_11_s.ppm  11_12_s.ppm  11_13_s.ppm  11_14_s.ppm  11_15_s.ppm  11_17_s.ppm  11_18_s.ppm  11_19_s.ppm  (+541 more)
output/: 10_10_s.ppm  10_11_s.ppm  10_12_s.ppm  10_13_s.ppm  10_14_s.ppm  10_15_s.ppm  10_16_s.ppm  10_17_s.ppm  10_18_s.ppm
